# sqlx

./: .gitignore  Cargo.toml
examples/: x.py
sqlx-cli/: Cargo.toml
sqlx-cli/src/: database.rs  migrate.rs  opt.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: connection.rs  database.rs  describe.rs  executor.rs  from_row.rs  lib.rs  query.rs  query_as.rs  query_builder.rs  query_scalar.rs  raw_sql.rs  statement.rs  type_checking.rs  value.rs
sqlx-core/src/any/: kind.rs  options.rs
sqlx-core/src/any/connection/: mod.rs
sqlx-core/src/config/: drivers.rs  macros.rs  reference.toml  tests.rs
sqlx-core/src/migrate/: error.rs  migrator.rs
sqlx-core/src/pool/: mod.rs  options.rs
sqlx-core/src/types/: mod.rs  text.rs
sqlx-macros/: Cargo.toml
sqlx-macros-core/: Cargo.toml
sqlx-macros-core/src/: lib.rs
sqlx-macros-core/src/database/: impls.rs  mod.rs
sqlx-macros-core/src/derives/: decode.rs  type.rs
sqlx-macros-core/src/query/: data.rs
sqlx-test/src/: lib.rs
src/: lib.md  lib.rs
src/any/: mod.rs
src/macros/: mod.rs
